--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: yoshikobot-md
+    name: emiliarezero-md
     env: docker
     region: Frankfurt
     plan: free
