--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"name": "YoshikoBot-MD",
+"name": "Emilia Re:zero - MD",
 "version": "2.0.0", 
 "description": "La Mejor Bot De WhatsApp",
 "main": "index.js",
@@ -17,16 +17,16 @@
 "test": "node test.js",
 "test2": "nodemon index.js" },
 
-"homepage": "https://github.com/OfcDiego/YoshikoBot-MD",
+"homepage": "https://github.com/OfcDiego/EmiliaRezero-MD",
 "author": {
 "name": "Dɪᴇɢᴏ.Oғᴄ" },
 
 "repository": {
 "type": "git",
-"url": "git+https://github.com/OfcDiego/YoshikoBot-MD.git" },
+"url": "git+https://github.com/OfcDiego/EmiliaRezero-MD.git" },
 
 "bugs": {
-"url": "https://github.com/OfcDiego/YoshikoBot-MD/issues" },
+"url": "https://github.com/OfcDiego/EmiliaRezero-MD/issues" },
 "license": "GPL-3.0-or-later",
 "dependencies": {
   "@adiwajshing/keyed-db": "^0.2.4",
