Actualizar app.json

--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-"name": "YoshikoBot-MD",
+"name": "Emilia Re:zero - MD",
 "website": "https://github.com/OfcDiego",
 "description": "Super Bot WhatsApp",
-"repository": "https://github.com/OfcDiego/YoshikoBot-MD",
+"repository": "https://github.com/OfcDiego/EmiliaRezero-MD",
 "logo": "https://telegra.ph/file/7e8fed70cb176dfc1f04e.jpg",
-"success_url": "https://github.com/OfcDiego/YoshikoBot-MD",
+"success_url": "https://github.com/OfcDiego/EmiliaRezero-MD",
 "keywords": [
 "nodejs", "heroku", "bot", "spanish", "english", "indonesian", "arab", "portuguese", "italian", "french", "whatsapp",
-"termux", "superbot", "multi-device", "md", "official", "javascript", "yoshiko"],
+"termux", "superbot", "multi-device", "md", "official", "javascript", "emilia"],
 "image": "heroku/nodejs",
 "buildpacks": [
 { "url": "heroku/nodejs" },
