--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys@6.7.2",
   "@xct007/frieren-scraper": "^0.0.2",
   "@SumiFX/Scraper": "github:SumiFX/SumiFX-Scraper",
+  "@StarlightsTeam/Scraper": "github:StarlightsTeam/StarlightsTeam-Scraper",
   "acrcloud": "^1.4.0",
   "api-dylux": "^1.5.5",
   "aptoide-scraper": "^1.0.1",
