--- a/package.json
+++ b/package.json
@@ -93,5 +93,9 @@
   "yargs": "^17.3.1",
   "yt-search": "^2.10.3",
   "ytdl-core": "^4.11.4",
-  "sharp": "^0.32.2"
-}}
+  "sharp": "^0.32.6"
+  "sharp": {
+   "optional": true
+   }},
+  "packageManager": "yarn@1.22.19"
+}
