--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 "@vitalets/google-translate-api": "^8.0.0",
 "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys@6.7.2",
 "@xct007/frieren-scraper": "^0.0.2",
-"@StarlightsTeam/Scraper": "github:StarlightsTeam/StarlightsTeam-Scraper",
+"@SumiFX/Scraper": "github:SumiFX/SumiFX-Scraper",
 "acrcloud": "^1.4.0",
 "api-dylux": "^1.5.5",
 "aptoide-scraper": "^1.0.1",
