--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
 "@vitalets/google-translate-api": "^8.0.0",
 "@whiskeysockets/baileys": "npm:@whiskeysockets/baileys@6.7.2",
 "@xct007/frieren-scraper": "^0.0.2",
-"@SumiFX/Scraper": "github:SumiFX/SumiFX-Scraper",
 "acrcloud": "^1.4.0",
 "api-dylux": "^1.5.5",
 "aptoide-scraper": "^1.0.1",
@@ -85,6 +84,8 @@
 "qrcode-terminal": "^0.12.0",
 "readline": "^1.3.0",
 "similarity": "^1.2.1",
+"@SumiFX/Scraper": "github:SumiFX/SumiFX-Scraper",
+"@StarlightsTeam/Scraper": "github:StarlightsTeam/StarlightsTeam-Scraper",
 "socket.io": "^4.6.1",
 "syntax-error": "^1.4.0",
 "terminal-image": "^2.0.0",
