Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 "name": "Luffy Bot - MD",
 "version": "2.0.1", 
-"description": "Bot De WhatsApp",
+"description": "Super Bot De WhatsApp",
 "main": "index.js",
 "type": "module",
 
