Actualizar app.json

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
 "name": "Luffy Bot - MD",
 "website": "https://github.com/OfcDiego",
-"description": "Bot De WhatsApp",
+"description": "Super Bot De WhatsApp",
 "repository": "https://github.com/OfcDiego/LuffyBot-MD",
 "logo": "https://telegra.ph/file/7e8fed70cb176dfc1f04e.jpg",
 "success_url": "https://github.com/OfcDiego/LuffyBot-MD",
