Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 
 "homepage": "https://github.com/OfcDiego/LuffyBot-MD",
 "author": {
-"name": "Dɪᴇɢᴏ.Oғᴄ" },
+"name": "galletita-luffy" },
 
 "repository": {
 "type": "git",
