--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 "name": "LuffyBot-MD",
-"version": "2.0.2", 
+"version": "5.0.0.0.0.2.3.3", 
 "description": "Super Bot De WhatsApp",
 "main": "index.js",
 "type": "module",
@@ -19,7 +19,7 @@
 
 "homepage": "https://github.com/OfcDiego/LuffyBot-MD",
 "author": {
-"name": "galletita-luffy" },
+"name": "Dɪᴇɢᴏ.Oғᴄ" },
 
 "repository": {
 "type": "git",
