--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -8,4 +8,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ['https://github.com/OfcDiego', 'https://whatsapp.com/channel/0029VaQD7LAJP216tu9liI2A', 'https://boxmineworld.com']
+custom: ['https://github.com/OfcDiego', 'https://whatsapp.com/channel/0029VaQD7LAJP216tu9liI2A', 'https://dash.infinity-wa.com']
