--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
-"name": "LuffyBot-MD",
-"website": "https://github.com/OfcDiego",
+"name": "GokuBot-MD",
+"website": "https://github.com/Jostin207",
 "description": "Super Bot De WhatsApp",
-"repository": "https://github.com/OfcDiego/LuffyBot-MD",
+"repository": "https://github.com/Jostin207/GokuBot-MD",
 "logo": "https://telegra.ph/file/7e8fed70cb176dfc1f04e.jpg",
-"success_url": "https://github.com/OfcDiego/LuffyBot-MD",
+"success_url": "https://github.com/Jostin207/GokuBot-MD",
 "keywords": [
 "nodejs", "heroku", "bot", "spanish", "english", "indonesian", "arab", "portuguese", "italian", "french", "whatsapp",
 "termux", "superbot", "multi-device", "md", "official", "javascript", "luffy"],
