--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
-github: [OfcDiego]
+github: [Jostin207]
 patreon: # Replace 
 open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
@@ -8,4 +8,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ['https://github.com/OfcDiego', 'https://whatsapp.com/channel/0029VaQD7LAJP216tu9liI2A', 'https://dash.infinity-wa.com']
+custom: ['https://github.com/Jostin207', 'https://whatsapp.com/channel/0029VaQD7LAJP216tu9liI2A', 'https://dash.infinity-wa.com']
