--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 "@adiwajshing/keyed-db": "^0.2.4",
 "@bochilteam/scraper": "4.2.4",
 "@brandond/findthelyrics": "^2.0.5",
+"ruhend-scraper": "^*",
 "@green-code/music-track-data": "^2.0.3",
 "@shineiichijo/marika": "^2.0.6",
 "@tensorflow/tfjs": "^3.18.0",
