Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
 "@adiwajshing/keyed-db": "^0.2.4",
 "@bochilteam/scraper": "4.2.4",
 "@brandond/findthelyrics": "^2.0.5",
-"ruhend-scraper": "^*",
+"ruhend-scraper": "^7.0.4",
 "@green-code/music-track-data": "^2.0.3",
 "@shineiichijo/marika": "^2.0.6",
 "@tensorflow/tfjs": "^3.18.0",
 "@vitalets/google-translate-api": "^8.0.0",
-"@whiskeysockets/baileys": "npm:@whiskeysockets/baileys@6.7.7",
+"@whiskeysockets/baileys": "npm:@whiskeysockets/baileys@6.7.2",
 "@xct007/frieren-scraper": "^0.0.2",
 "acrcloud": "^1.4.0",
 "api-dylux": "^1.5.5",
@@ -47,7 +47,7 @@
 "boxen": "^7.1.1",
 "cfonts": "^3.1.1",
 "chalk": "^5.0.1",
-"cheerio": "^1.0.0-rc.12",
+"cheerio": "npm:cheerio@1.0.0-rc.12",
 "colors": "1.4.0",
 "countries-and-timezones": "^3.6.0",
 "didyoumean": "^1.2.2",
