Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
 "scripts": {
 "start": "node index.js",
 "qr": "node index.js qr",
-"code": "node index.js code",
-"test": "node test.js",
-"test2": "nodemon index.js" },
+"code": "node index.js code" },
 
 "homepage": "https://github.com/Jostin207/GokuBot-MD",
 "author": {
